--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&family=Roboto:wght@300;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto");
 body {
-  font-family: "Roboto", sans-serif;
-  color: red;
+  font-family: Roboto, sans-serif;
 }
